Project/ProjetASL3_LUSTGARTEN_OUMAKHLOUF/test/syn-err/err2.tpc
int main(void) {
    int x;
    x == 4; // error

    return 0;
}
